hphp/hack/test/typecheck/new_expression_targ_num_mismatch.php
<?hh

class Foo<T> {}

function foo<T>() : void {}

function test() : void {
  new Foo<int,int>(); // bad
}
